--- a/src/app/FutureModules/list/list.component.html
+++ b/src/app/FutureModules/list/list.component.html
@@ -1,6 +1,16 @@
 <app-header> </app-header>
 
 <main class="app-content">
+  <div class="top-menu">
+    <div>
+      <mat-form-field>
+        <input matInput value="" #search>
+      </mat-form-field>
+      <button mat-button (click)="getCourses(search.value)">Search</button>
+    </div>
+    <button mat-button (click)="new()">Add course</button>
+  </div>
+
   <table mat-table [dataSource]="courses" class="mat-elevation-z8">
 
     <ng-container matColumnDef="name">
@@ -21,6 +31,14 @@
     <ng-container matColumnDef="date">
       <th mat-header-cell *matHeaderCellDef> Date </th>
       <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-button (click)="edit(element.id)">Edit</button>
+        <button mat-button (click)="delete(element.id)">Delete</button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
