--- a/src/app/SharedModules/header/header.component.html
+++ b/src/app/SharedModules/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="app-header">
   <a href="/courses" mat-button>Logo</a>
   <h1>Courses</h1>
-  <span><a *ngIf="!unsign" (click)="onLogOut()" mat-button>Logout</a></span>
+  <span><a *ngIf="signedIn | async" (click)="onLogOut()" mat-button>Logout</a></span>
 </header>
